<resources>
    <string name="app_name" translatable="false">MBA FIAP ANDROID</string>
    <string name="app_login">Projeto Final Android FIAP 1MOBR</string>
    <string name="app_email">E-mail</string>
    <string name="app_password">Password</string>
    <string name="app_username">Username</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="app_forgot">Forgot Password?</string>
    <string name="app_new_account">Create a new account</string>
    <string name="msg_firebase">Error updating user profile.</string>
    <string name="msg_firebase_register_successfully">Successfully registered user.</string>
    <string name="msg_firebase_register_failure">Failed to register the user.</string>
    <string name="msg_fields">Fill in all fields.</string>
    <string name="msg_fields_email">E-mail or password are not valid.</string>
    <string name="msg_products_add">Add Product</string>
    <string name="msg_login_failure">Error when logging in</string>
    <string name="app_product_name">Product</string>
    <string name="app_product_remove">Remove</string>
    <string name="app_product_add">Choose photo</string>
    <string name="app_product_add_camera">Use camera</string>
    <string name="app_product_add_name">Product name</string>
    <string name="app_product_add_save">Save</string>
    <string name="app_product_update">Saved successfully</string>
    <string name="app_product_saving">Saving...</string>
    <string name="app_product_update_error">Was not saved</string>
    <string name="app_product_load_error">Error on retrieve product</string>
    <string name="app_recover_password">Send e-mail</string>
    <string name="app_recover_password_msg">You will receive an email to change your password.</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to exit the application?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="msg_fields_email_invalid">Invalid email</string>
    <string name="msg_email_sent">If the email was valid you`ll receive an message to recover your account</string>
</resources>