<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChoosePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_product_add"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonTakePhoto"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>


    <Button
        android:id="@+id/buttonTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_product_add_camera"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/buttonChoosePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtProductName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/app_product_add_name"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputProductName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_product_add_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName" />

</androidx.constraintlayout.widget.ConstraintLayout>
