<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_24"
        android:layout_marginEnd="@dimen/default_margin_24"
        android:layout_marginBottom="@dimen/default_margin_16"
        android:hint="@string/app_email"
        android:textColorHint="@color/color_white"
        app:boxStrokeColor="@color/color_white"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/color_white"
            android:textSize="@dimen/default_size_16"
            android:textStyle="bold"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_24"
        android:layout_marginEnd="@dimen/default_margin_24"
        android:layout_marginBottom="@dimen/default_margin_16"
        android:hint="@string/app_password"
        android:textColorHint="@color/color_white"
        app:boxStrokeColor="@color/color_white"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/textForgotPassw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/color_white"
            android:textSize="@dimen/default_size_16"
            android:textStyle="bold"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_32"
        android:layout_marginEnd="@dimen/default_margin_32"
        android:layout_marginBottom="@dimen/margin_250"
        android:text="@string/btn_login"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/default_size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_32"
        android:text="@string/app_new_account"
        android:textColor="@color/color_white"
        android:textSize="@dimen/default_size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_24"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:text="@string/app_login"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/default_size_24"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textForgotPassw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_24"
        android:layout_marginEnd="@dimen/default_margin_24"
        android:layout_marginBottom="@dimen/default_margin_24"
        android:gravity="right"
        android:text="@string/app_forgot"
        android:textColor="@color/color_white"
        android:textSize="@dimen/default_size_16"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>