<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.RegisterUser">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUserEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/app_email"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputtxtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/app_username"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputtxtUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="374dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/app_password"
        android:textColorHint="#A7A7A7"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginTop="200dp"
        android:text="@string/btn_register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="286dp"
        android:layout_height="66dp"
        android:text="@string/app_login"
        android:textAlignment="center"
        android:textColor="#4E4E4E"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

</androidx.constraintlayout.widget.ConstraintLayout>