<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_16"
        android:src="@drawable/product"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChoosePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_8"
        android:layout_marginBottom="@dimen/default_margin_16"
        android:text="@string/app_product_add"
        app:layout_constraintBottom_toTopOf="@+id/txtProductName"
        app:layout_constraintEnd_toStartOf="@+id/buttonTakePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:id="@+id/buttonTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_8"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginBottom="@dimen/default_margin_16"
        android:text="@string/app_product_add_camera"
        app:layout_constraintBottom_toTopOf="@+id/txtProductName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonChoosePhoto"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtProductName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_24"
        android:layout_marginEnd="@dimen/default_margin_24"
        android:layout_marginBottom="@dimen/default_margin_32"
        android:hint="@string/app_product_add_name"
        android:textColorHint="@color/color_grey"
        app:boxStrokeColor="@color/color_grey"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_grey"
            android:textSize="@dimen/default_size_16"
            android:textStyle="bold"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_32"
        android:layout_marginEnd="@dimen/default_margin_32"
        android:layout_marginBottom="@dimen/margin_128"
        android:text="@string/app_product_add_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
